@@ -1,6 +1,8 @@
 Release 1.1.1 (in development)
 ==============================
 
+* #797: Don't crash on a misformatted glossary.
+
 * #801: Make intersphinx work properly without SSL support.
 
 * #805: Make the ``Sphinx.add_index_to_domain`` method work correctly.
